# web-scout

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IWSA_VS_SCRAPES_AI_COMPARISON.txt  JOB_BOARD.txt  LLM_architecture.txt  README.md  README_LLM_SYSTEM.md  SCRAPES_AI_INSIGHTS.txt  SRS.txt  SRS2.txt  beta_SRS.txt  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start_local_scraper.py  web_server.py
.github/workflows/: scraping.yml  test.yml
desktop-scraper/: .env.example  .env.signing.template  GOOGLE_SETUP.md  LLM_USAGE_GUIDE.md  README.md  package-lock.json  package.json  package.json.backup  package.json.backup-installer  tailwind.config.js.bak  tsconfig.json  tsconfig.main.json
desktop-scraper/assets/: README.md  entitlements.mac.plist  icon.icns
desktop-scraper/docs/: CODE_SIGNING_GUIDE.md  INSTALLER_GUIDE.md
desktop-scraper/models/: README.md
desktop-scraper/public/: electron.js  index.html
desktop-scraper/scripts/: build_signed.sh  generate_icons.py  generate_installer_assets.py  setup_code_signing.sh
desktop-scraper/src/: index.tsx
examples/: llm_strategy_example.py
iwsa/: __init__.py  cli.py
iwsa/config/: __init__.py  profiles.py  settings.py
iwsa/core/: __init__.py  engine.py  prompt_processor.py  reconnaissance.py
iwsa/data/: __init__.py  exporters.py  pipeline.py  processors.py  storage.py
iwsa/jobs/: __init__.py  job_intelligence.py  job_parser.py  job_templates.py
iwsa/llm/: __init__.py  channels.py  hub.py  providers.py  (+1 more)
models/: README.md
scripts/: setup_tinyllama.py  test_model_status.py
tests/: __init__.py  conftest.py
training/: README.md  dataset_preparation.py  evaluation.py  requirements.txt  run_training.sh  train_tinyllama.py
(+63 files in other folders)
